# Hackathon-ai-native-book

./: .gitignore  404.html  GEMINI.md  index.html  sitemap.xml
.gemini/commands/: sp.adr.toml  sp.analyze.toml  sp.checklist.toml  sp.clarify.toml  sp.implement.toml  sp.plan.toml  sp.specify.toml  sp.tasks.toml
.github/workflows/: deploy-docusaurus.yml  deploy-fastapi.yml
.specify/memory/: constitution.md
assets/css/: styles.a8a85c82.css  styles.ca017d2e.css
assets/js/: 01a85c17.311b8967.js  02e313bc.9f41fc34.js  0347e4ea.508b0743.js  0347e4ea.92785c53.js  08790753.5c264272.js  0ca7c056.221fd6a6.js  10f59a37.38bf3469.js  135829af.c6247353.js  139b4dc0.79e6e378.js  14a03ff3.464c5558.js  14a03ff3.f672499d.js  1aab0b9c.41a88f39.js  1d61ef06.39f437fd.js  2237.884e0d78.js  27184f1a.222c0826.js  (+108 more)
backend/: .env.example  Dockerfile  Requirements.txt  config.py  main.py  pyproject.toml  requirements.txt
backend/api/: routes.py
backend/data/: book.txt
backend/models/: schemas.py
backend/scripts/: embed_content.py  ingest.py  init_db.py
backend/services/: chatbot_service.py  db_service.py  embedding_service.py
backend/src/: main.py
backend/src/api/: chat.py
backend/src/core/: config.py
backend/src/models/: database.py  schemas.py
backend/src/services/: agent_service.py  chat_history_service.py  ingestion_service.py  qdrant_service.py
backend/tests/: rag_benchmarks.py  rag_evaluation.py  test_chat_history.py
blog/: atom.xml  index.html  rss.xml
book/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+257 files in other folders)
