[project]
name = "backend"
version = "0.1.0"
description = "Backend for the Integrated RAG Chatbot"
authors = []
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "cohere",
    "qdrant-client",
    "pydantic",
    "pydantic-settings",
    "trafilatura>=2.0.0",
    "openai-agents>=0.6.3",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "psycopg2>=2.9.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]  # include your package folder here
